# data-engineering-zoomcamp

./: .gitignore  README.md  main.tf  pyproject.toml  variables.tf
.devcontainer/: devcontainer.json
Homework/Module_1/: Dockerfile  Module_1.md  docker-compose.yaml  ingest_data.py  pyproject.toml
Homework/Module_2/: Module_2.md
Homework/Module_3/: README.md  load_yellow_taxi_data.py
Homework/Module_4/: README.md  ingest_fhv.py  sources.yml  stg_fhv_tripdata.sql
Homework/Module_7/: README.md  main.py
Module-01-docker-terraform/: .gitignore
Module-01-docker-terraform/pipeline/: notebook.ipynb  pyproject.toml
Module-02-workflow-orchestration/: notebook.ipynb
Module-03-data-warehouse/: extract_model.md  machine_learning_biqquery_script
Module-07-streaming/: docker-compose.yaml  pyproject.toml
Module-07-streaming/notebooks/: consumer.ipynb  (+1 more)
Project/: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
Project/dashboard/: Dockerfile  app.py  requirements.txt
Project/dbt/: dbt_project.yml  profiles.yml
Project/dbt/models/marts/: mart_home_court_advantage.sql  schema.yml
Project/dbt/models/staging/: schema.yml  sources.yml  stg_games.sql
Project/ingestion/: ingest.py  requirements.txt
Project/kestra/: docker-compose.yaml
Project/kestra/flows/: nba_pipeline.yaml
Project/spark/: Dockerfile  requirements.txt  transform.py
Project/terraform/: main.tf  outputs.tf  variables.tf
pipeline/: Dockerfile  ingest_data.py  pipeline.py
spark/: 05_taxi_schema.ipynb  06_spark_sql.ipynb  download_data.sh
(+56 files in other folders)
