[project]
name = "nba-home-court"
version = "0.1.0"
description = "NBA Home Court Advantage — End-to-end data pipeline"
requires-python = ">=3.12"

[tool.setuptools]
packages = []
dependencies = [
    "kaggle>=1.6.17",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-bigquery>=3.27.0",
    "db-dtypes>=1.3.1",
    "tqdm>=4.67.1",
    "click>=8.1.8",
    "dbt-bigquery>=1.8.0",
    "streamlit>=1.41.1",
    "plotly>=5.24.1",
]
